* Removed xml-light use in xmlplaylist, switched to xmlm  * Removed xml-light use as well as anonymous logins in    lastfm radio part: anonymous connections to radios is    no longer available at lastfm..  * Made lastfm login mandatory for radio  * Made audioscrobbler and radio host configurable, in order    to allow to connect to other implementations, in particular    libre.fm  * Adapted liquidsoap for the new lastfm API
--HG--
extra : convert_revision : svn%3Aaec24677-d710-0410-a355-ac75e2bdf181/trunk%406581

--- a/configure.ac
+++ b/configure.ac
@@ -94,15 +94,15 @@ CAMLLIBPATH=`$OCAMLC -where`
 AC_PROG_CC()
 
 #
-# xml-light
+# Xmlm
 #
 
-AC_MSG_CHECKING(for ocaml-xml-light)
-   if ! $OCAMLFIND query xml-light > /dev/null 2>&1 ; then
+AC_MSG_CHECKING(for xmlm)
+   if ! $OCAMLFIND query xmlm > /dev/null 2>&1 ; then
        AC_MSG_ERROR(Not found.)
    else
-   INC="$INC `$OCAMLFIND query xml-light`"
-   requires="$requires xml-light"
+   INC="$INC `$OCAMLFIND query xmlm`"
+   requires="$requires xmlm"
    AC_MSG_RESULT(ok)
 fi
 
