--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -44,6 +44,8 @@ byte: byte-code-library
 
 opt: native-code-library
 
+native-code-library: byte-code-library
+
 htdoc:
 	mkdir -p doc/html
 	ocamldoc -html -d doc/html
