--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,8 +11,9 @@ OCAMLFIND = @OCAMLFIND@
 OCAMLFIND_LDCONF = @OCAMLFIND_LDCONF@
 OCAMLC = @OCAMLC@
 OCAMLOPT = @OCAMLOPT@
-BEST = @BEST@
+OCAMLBEST = @OCAMLBEST@
 OCAMLMKTOP = @OCAMLMKTOP@
+OCAMLMKLIB = @OCAMLMKLIB@
 OCAMLCP = @OCAMLCP@
 OCAMLDEP = @OCAMLDEP@
 OCAMLLEX = @OCAMLLEX@
@@ -39,7 +40,7 @@ NO_CUSTOM = yes
 OCAMLFLAGS = @OCAMLFLAGS@
 
 
-all: $(BEST)
+all: $(OCAMLBEST)
 
 byte: byte-code-library
 
