--- a/xmlplaylist.opam
+++ b/xmlplaylist.opam
@@ -1,24 +1,24 @@
 opam-version: "2.0"
-version: "dev"
+name: "xmlplaylist"
+version: "0.1.4"
 maintainer: "Romain Beauxis <toots@rastageeks.org>"
 authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
 homepage: "https://github.com/savonet/ocaml-xmlplaylist"
+synopsis: "Library to parse various file playlists in XML format"
 build: [
-  ["./bootstrap"]
+  ["./bootstrap"] {pinned}
   ["./configure" "--prefix" prefix]
+  [make "clean"] {pinned}
   [make]
 ]
 install: [
   [make "install"]
 ]
-remove: ["ocamlfind" "remove" "xmlplaylist"]
-depends: ["ocaml" "ocamlfind" "xmlm"]
+depends: [
+  "ocaml"
+  "ocamlfind" {build}
+  "xmlm"
+]
 bug-reports: "https://github.com/savonet/ocaml-xmlplaylist/issues"
 dev-repo: "git+https://github.com/savonet/ocaml-xmlplaylist.git"
 synopsis: "Library to parse various file playlists in XML format"
-flags: light-uninstall
-url {
-  src:
-    "https://github.com/savonet/ocaml-xmlplaylist/releases/download/0.1.4/ocaml-xmlplaylist-0.1.4.tar.gz"
-  checksum: "md5=99117433dacb84117af7f01bac67df81"
-}
