--- a/xmlplaylist.opam
+++ b/xmlplaylist.opam
@@ -6,9 +6,9 @@ authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
 homepage: "https://github.com/savonet/ocaml-xmlplaylist"
 synopsis: "Library to parse various file playlists in XML format"
 build: [
-  ["./bootstrap"] {pinned}
+  ["./bootstrap"] {dev}
   ["./configure" "--prefix" prefix]
-  [make "clean"] {pinned}
+  [make "clean"] {dev}
   [make]
 ]
 install: [
